# trainer

./: .editorconfig  .gitignore  README.md  mnist_demo.py  pyproject.toml
trainer/: core.py  utils.py
trainer/plugins/: __init__.py  checkpoint.py  early_stopping.py  progress_bar.py
